# gitoverit

./: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  benchmark.sh  pyproject.toml  test_parallel.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: CLAUDEREVIEW.md  PARALLELIZATION.md  PARALLELIZE-IMPL-PLAN.md  PARALLELIZE-PLAN.md
src/gitoverit/: __init__.py  cli.py  progress.py  reporting.py
src/gitoverit/output/: __init__.py  json.py  table.py
tasks/: check  test
tests/: test_gitoverit.py  test_table_output.py
