[project]
name = "gitoverit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mevanlc", email = "mevanlc@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "GitPython>=3.1.43",
]

[project.scripts]
gitoverit = "gitoverit:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.405",
]
